--- a/GoC/Saved/Config/Windows/Engine.ini
+++ b/GoC/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/Zeetermin/Documents/Unreal Projects/GoC/Content
+Paths=../../../../../../Users/Zeetermin/Documents/GitHub/Huescale/GoC/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
