--- a/GoC/Saved/Config/Windows/EditorLayout.ini
+++ b/GoC/Saved/Config/Windows/EditorLayout.ini
@@ -1,156 +1,6 @@
 [EditorLayouts]
-Blueprints_Unified_Components_v5=(\
-	"Type": "Layout",\
-	"Name": "Blueprints_Unified_Components_v5",\
-	"PrimaryAreaIndex": 0,\
-	"Areas": [\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Horizontal",\
-			"WindowPlacement": "Placement_NoWindow",\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 0.15000000596046448,\
-					"Type": "Splitter",\
-					"Orientation": "Orient_Vertical",\
-					"Nodes": [\
-						(\
-							"SizeCoefficient": 0.30000001192092896,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "ConstructionScriptEditor",\
-							"Tabs": [\
-								(\
-									"TabId": "ConstructionScriptEditor",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.69999998807907104,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "MyBlueprint",\
-							"Tabs": [\
-								(\
-									"TabId": "MyBlueprint",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						)\
-					]\
-				),\
-				(\
-					"SizeCoefficient": 0.60000002384185791,\
-					"Type": "Splitter",\
-					"Orientation": "Orient_Vertical",\
-					"Nodes": [\
-						(\
-							"SizeCoefficient": 0.18672099709510803,\
-							"Type": "Stack",\
-							"HideTabWell": true,\
-							"ForegroundTab": "AssetEditorToolkit_Toolbar",\
-							"Tabs": [\
-								(\
-									"TabId": "AssetEditorToolkit_Toolbar",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.80000001192092896,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "Document : 2",\
-							"Tabs": [\
-								(\
-									"TabId": "SCSViewport",\
-									"TabState": "OpenedTab"\
-								),\
-								(\
-									"TabId": "Document",\
-									"TabState": "ClosedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.20000000298023224,\
-							"Type": "Stack",\
-							"HideTabWell": false,\
-							"ForegroundTab": "CompilerResults",\
-							"Tabs": [\
-								(\
-									"TabId": "CompilerResults",\
-									"TabState": "OpenedTab"\
-								),\
-								(\
-									"TabId": "FindResults",\
-									"TabState": "ClosedTab"\
-								)\
-							]\
-						)\
-					]\
-				),\
-				(\
-					"SizeCoefficient": 0.25,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "Inspector",\
-					"Tabs": [\
-						(\
-							"TabId": "Inspector",\
-							"TabState": "OpenedTab"\
-						),\
-						(\
-							"TabId": "PaletteList",\
-							"TabState": "ClosedTab"\
-						)\
-					]\
-				)\
-			]\
-		)\
-	]\
-)
-Standalone_BlueprintDefaults_Layout_v6=(\
-	"Type": "Layout",\
-	"Name": "Standalone_BlueprintDefaults_Layout_v6",\
-	"PrimaryAreaIndex": 0,\
-	"Areas": [\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Vertical",\
-			"WindowPlacement": "Placement_NoWindow",\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 0.20000000298023224,\
-					"Type": "Stack",\
-					"HideTabWell": true,\
-					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
-					"Tabs": [\
-						(\
-							"TabId": "AssetEditorToolkit_Toolbar",\
-							"TabState": "OpenedTab"\
-						)\
-					]\
-				),\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "DefaultEditor",\
-					"Tabs": [\
-						(\
-							"TabId": "DefaultEditor",\
-							"TabState": "OpenedTab"\
-						)\
-					]\
-				)\
-			]\
-		)\
-	]\
-)
+Blueprints_Unified_Components_v5=( 	"Type": "Layout", 	"Name": "Blueprints_Unified_Components_v5", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.15000000596046448, 					"Type": "Splitter", 					"Orientation": "Orient_Vertical", 					"Nodes": [ 						( 							"SizeCoefficient": 0.30000001192092896, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "ConstructionScriptEditor", 							"Tabs": [ 								( 									"TabId": "ConstructionScriptEditor", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.69999998807907104, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "MyBlueprint", 							"Tabs": [ 								( 									"TabId": "MyBlueprint", 									"TabState": "OpenedTab" 								) 							] 						) 					] 				), 				( 					"SizeCoefficient": 0.60000002384185791, 					"Type": "Splitter", 					"Orientation": "Orient_Vertical", 					"Nodes": [ 						( 							"SizeCoefficient": 0.18672099709510803, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "AssetEditorToolkit_Toolbar", 							"Tabs": [ 								( 									"TabId": "AssetEditorToolkit_Toolbar", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.80000001192092896, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "Document : 2", 							"Tabs": [ 								( 									"TabId": "SCSViewport", 									"TabState": "OpenedTab" 								), 								( 									"TabId": "Document", 									"TabState": "ClosedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.20000000298023224, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "CompilerResults", 							"Tabs": [ 								( 									"TabId": "CompilerResults", 									"TabState": "OpenedTab" 								), 								( 									"TabId": "FindResults", 									"TabState": "ClosedTab" 								) 							] 						) 					] 				), 				( 					"SizeCoefficient": 0.25, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "Inspector", 					"Tabs": [ 						( 							"TabId": "Inspector", 							"TabState": "OpenedTab" 						), 						( 							"TabId": "PaletteList", 							"TabState": "ClosedTab" 						) 					] 				) 			] 		) 	] )
+Standalone_BlueprintDefaults_Layout_v6=( 	"Type": "Layout", 	"Name": "Standalone_BlueprintDefaults_Layout_v6", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.20000000298023224, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "DefaultEditor", 					"Tabs": [ 						( 							"TabId": "DefaultEditor", 							"TabState": "OpenedTab" 						) 					] 				) 			] 		) 	] )
 UnrealEd_Layout_v1.4=(\
 	"Type": "Layout",\
 	"Name": "UnrealEd_Layout_v1.4",\
@@ -174,39 +24,6 @@ UnrealEd_Layout_v1.4=(\
 						),\
 						(\
 							"TabId": "DockedToolkit",\
-							"TabState": "ClosedTab"\
-						)\
-					]\
-				)\
-			]\
-		),\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Horizontal",\
-			"WindowPlacement": "Placement_Specified",\
-			"WindowPosition_X": 353,\
-			"WindowPosition_Y": 189,\
-			"WindowSize_X": 1331,\
-			"WindowSize_Y": 722,\
-			"bIsMaximized": false,\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "ProjectSettings",\
-					"Tabs": [\
-						(\
-							"TabId": "EditorSettings",\
-							"TabState": "ClosedTab"\
-						),\
-						(\
-							"TabId": "ProjectSettings",\
-							"TabState": "OpenedTab"\
-						),\
-						(\
-							"TabId": "PluginsEditor",\
 							"TabState": "ClosedTab"\
 						)\
 					]\
@@ -263,6 +80,39 @@ UnrealEd_Layout_v1.4=(\
 					"Tabs": [\
 						(\
 							"TabId": "MergeTool",\
+							"TabState": "ClosedTab"\
+						)\
+					]\
+				)\
+			]\
+		),\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Horizontal",\
+			"WindowPlacement": "Placement_Specified",\
+			"WindowPosition_X": 353,\
+			"WindowPosition_Y": 189,\
+			"WindowSize_X": 1331,\
+			"WindowSize_Y": 722,\
+			"bIsMaximized": false,\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "None",\
+					"Tabs": [\
+						(\
+							"TabId": "EditorSettings",\
+							"TabState": "ClosedTab"\
+						),\
+						(\
+							"TabId": "ProjectSettings",\
+							"TabState": "ClosedTab"\
+						),\
+						(\
+							"TabId": "PluginsEditor",\
 							"TabState": "ClosedTab"\
 						)\
 					]\
