--- a/GoC/Saved/Config/Windows/EditorUserSettings.ini
+++ b/GoC/Saved/Config/Windows/EditorUserSettings.ini
@@ -46,7 +46,6 @@ MRUItem0=C:/Users/Zeetermin/Documents/Unreal Projects/GoC/Content/testmap.umap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/BasicCharacter.BasicCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -186,6 +185,10 @@ FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_Timeline.GraphNodeDetail=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.GameInstance=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/BasicCharacter.BasicCharacter;
@@ -200,8 +203,8 @@ StaticMeshActor.Actor=False
 FloatProperty.Variable=False
 
 [DetailPropertyExpansion]
-InputSettings="Object.Bindings.ActionMappings.ActionMappings[0]" "Object.Bindings.ActionMappings.ActionMappings[2]" "Object.Bindings.ActionMappings.ActionMappings[5]" "Object.Bindings.AxisMappings.AxisMappings[3]" "Object.Bindings.AxisMappings.AxisMappings[5]" "Object.Bindings.AxisMappings.AxisMappings[9]" 
-Object="Object.Bindings.ActionMappings.ActionMappings[0]" "Object.Bindings.ActionMappings.ActionMappings[2]" "Object.Bindings.ActionMappings.ActionMappings[5]" "Object.Bindings.AxisMappings.AxisMappings[3]" "Object.Bindings.AxisMappings.AxisMappings[5]" "Object.Bindings.AxisMappings.AxisMappings[9]" 
+InputSettings=Object.Bindings.ActionMappings.ActionMappings[0]" "Object.Bindings.ActionMappings.ActionMappings[2]" "Object.Bindings.ActionMappings.ActionMappings[5]" "Object.Bindings.AxisMappings.AxisMappings[3]" "Object.Bindings.AxisMappings.AxisMappings[5]" "Object.Bindings.AxisMappings.AxisMappings[9]
+Object=
 
 [DetailCustomWidgetExpansion]
 InputSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RightLeft,InputSettings.Bindings.AxisMappings.CameraUp,InputSettings.Bindings.AxisMappings.CameraRight,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Dodge,InputSettings.Bindings.ActionMappings.Switch,InputSettings.Bindings.AxisMappings.Forward,
@@ -220,7 +223,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
@@ -228,7 +231,7 @@ ContentBrowserTab1.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=384.000 Y=196.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
